# NumPyForge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CASE_STUDY.md  CHANGELOG.md  DEMO.md  DEVELOPMENT.md  Dockerfile  Makefile  PORTFOLIO.md  README.md  RELEASE.md  ROADMAP.md  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  main.py
configs/: evaluation.json  serving.json  training.json
docs/: api_examples.http  demo_recording.md  github_polish.md  release_notes_v0.1.0.md
examples/: classical_ml.py  estimator_lifecycle.py  evaluation.py  neural_networks.py  portfolio_demo.py
pipeline/: __init__.py  evaluate.py  ingest.py  train.py
src/: __init__.py  artifacts.py  base.py  baselines.py  config.py  linear_model.py  logging_utils.py  math.py  metrics.py  model_selection.py  optimizers.py  random.py  types.py  validation.py
src/neural_network/: __init__.py  estimators.py  gradient_check.py  initializers.py  layers.py  losses.py  network.py
tests/: test_api.py  test_artifacts.py  test_base.py  test_gradients.py  test_linear_model.py  test_math.py  test_metrics.py  test_model_selection.py  test_neural_network_estimators.py  test_neural_network_gradients.py  test_neural_network_layers.py  test_optimizers.py  test_pipeline_phase5.py  test_validation.py
